<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">百星子</string>
    <string name="hit_printer_ID">打印机型号</string>
    
    <string name="hit_custom">客户名称</string>
    <string name="hit_admin">管理员</string>
    <string name="hit_archives_type">档案类型</string>
    <string name="hit_post_time">JOB发送时间</string>
    <string name="hit_over_time">JOB完成时间</string>
    <string name="hit_archives_num">档案本数</string>
    <string name="hit_counter_init">计数器初始值</string>
    <string name="hit_counter_over">计数器完成值</string>

    <string name="hit_paper_scrap">纸张报废数量</string>
    <string name="hit_memo">备注</string>
    <string name="commit_text"> 提 交 </string>
    <string name="save_text"> 保 存 </string>
    <string name="text_loading">加载数据中...</string>

    <!-- StatSelView的标题控件TAG -->
    <string name="tag_tv_title">tv_title</string>
    <!-- StatSelView的选择显示控件TAG -->
    <string name="tag_tv_sel">tv_sel</string>
    <!-- StatSelView的图标控件TAG -->
    <string name="tag_iv_icon">iv_icon</string>
    <string name="desc_iv_icon">选择View标识图标</string>
    
    <string name="no_conn_val">没有网络连接</string>
    <string name="time_out_val">网络连接超时</string>
    
    <string name="dialog_net_title">网络异常</string>
    <string name="dialog_ok">确定</string> 
    
    <string name="dialog_success_title">成功</string> 
    <string name="dialog_success_cont">数据发送成功</string> 
    
    <string name="dialog_failure_title">失败</string> 
    <string name="dialog_failure_cont">请求超时或服务器连接失败</string>
    
    
</resources>