<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
     >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

        <ImageView
            android:id="@+id/icon"
            android:tag="@string/tag_iv_icon"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/gongwenbao"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:contentDescription="@string/desc_iv_icon"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:tag="@string/tag_tv_title"
            android:textColor="@drawable/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_toRightOf="@id/icon"
             />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="32dip"
        android:tag="@string/tag_tv_sel"
        android:textColor="@drawable/darkgrey"
        android:textSize="12sp"
        android:layout_marginBottom="4dip"
         />

</LinearLayout>