<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbarFadeDuration="2000"
        android:scrollbars="vertical" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:text="@string/hit_printer_ID"
                    android:textColor="@drawable/blue"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/deviceNo"
                    android:layout_width="240dip"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:text="@string/hit_admin"
                    android:textColor="@drawable/blue"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/custName"
                    android:layout_width="240dip"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:text="@string/hit_archives_type"
                    android:textColor="@drawable/blue"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/archivesType"
                    android:layout_width="240dip"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <EditText
                android:id="@+id/archivesNum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hit_archives_num"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/counterInit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hit_counter_init"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/counterOver"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hit_counter_over"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/paperScrap"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hit_paper_scrap"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/memo"
                android:layout_width="fill_parent"
                android:layout_height="120dip"
                android:gravity="top"
                android:hint="@string/hit_memo"
                android:inputType="textImeMultiLine"
                android:singleLine="false" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="right"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/commitBtn"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dip"
                    android:text="@string/commit_text"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dip"
                    android:text="@string/save_text"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>